@@ -9,6 +9,8 @@
        real url, separated with '?'. (Stefan)
 - NEW: The state of the 'merge non-interactive' checkbox is remembered
        across sessions. (Stefan)
+- NEW: editing the author in the log dialog is now possible for
+       multiple selected revisions. (Stefan)
 - CHG: The bug-ID column width in the log dialog is now limited 
        to 200 pixels. (Stefan)
 - CHG: The right-drag context menu now only shows "Export" if a versioned
